--- a/h2o-core/build.gradle
+++ b/h2o-core/build.gradle
@@ -12,6 +12,7 @@ dependencies {
   compile "org.apache.commons:commons-math3:3.3"
   compile "org.apache.directory.studio:org.apache.commons.lang:2.6"
   compile "ai.h2o:google-analytics-java:1.1.2-H2O-CUSTOM"
+  compile "org.eclipse.jetty:jetty-servlet:9.2.11.v20150529"
 
   compile("log4j:log4j:1.2.15") { 
     exclude module: "activation" 
